--- a/css/style.css
+++ b/css/style.css
@@ -62,3 +62,18 @@ h5 {
   background-color: white;
   color: black;
 }
+
+.a-footer {
+  color: black;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+@media (min-width: 992px) {
+  .col-lg-6 {
+    display: flex;
+    width: 50%;
+    justify-content: flex-end;
+    align-items: flex-end;
+  }
+}
