renew logo in navbar and footer

--- a/css/style.css
+++ b/css/style.css
@@ -36,11 +36,11 @@ h5 {
   color: #ffffff;
 }
 
-.navbar-brand-bg {
+/* .navbar-brand-bg {
   background-color: #0d28a6;
   color: #0d28a6;
   font-size: medium;
-}
+} */
 
 .text-justify {
   text-align: justify;
